[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Theme/popup.tres" type="StyleBox" id=2]
[ext_resource path="res://Theme/button.tres" type="StyleBox" id=3]
[ext_resource path="res://Theme/button_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://Theme/text_edit.tres" type="StyleBox" id=5]
[ext_resource path="res://Theme/text_display.tres" type="StyleBox" id=6]
[ext_resource path="res://Theme/select_list.tres" type="StyleBox" id=7]
[ext_resource path="res://Resources/UI/arrows.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="Theme" id=3]
/fonts/Button = null
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/styles/disabled = SubResource( 1 )
Button/styles/hover = ExtResource( 4 )
Button/styles/normal = ExtResource( 3 )
Button/styles/pressed = ExtResource( 4 )
ItemList/colors/font_color = Color( 0, 0, 0, 1 )
ItemList/colors/font_color_selected = Color( 1, 1, 1, 1 )
ItemList/styles/bg = ExtResource( 7 )
Label/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_selected = Color( 1, 1, 1, 1 )
LineEdit/colors/selection_color = Color( 0.490196, 0.490196, 0.490196, 1 )
LineEdit/styles/focus = ExtResource( 5 )
LineEdit/styles/normal = ExtResource( 5 )
PopupDialog/styles/panel = ExtResource( 2 )
RichTextLabel/colors/default_color = Color( 0, 0, 0, 1 )
SpinBox/icons/updown = ExtResource( 8 )
TextEdit/colors/font_color = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color_readonly = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color_selected = Color( 1, 1, 1, 1 )
TextEdit/styles/normal = ExtResource( 6 )
TextEdit/styles/read_only = ExtResource( 6 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = SubResource( 3 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 332.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Select"]
margin_right = 332.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Select/VBoxContainer"]
margin_right = 332.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
text = "Label"
align = 1
valign = 1

[node name="ItemList" type="ItemList" parent="MarginContainer/HBoxContainer/Select/VBoxContainer"]
margin_top = 49.0
margin_right = 332.0
margin_bottom = 503.0
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Select/VBoxContainer"]
margin_top = 507.0
margin_right = 332.0
margin_bottom = 575.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/Select/VBoxContainer"]
margin_top = 579.0
margin_right = 332.0
margin_bottom = 579.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 336.0
margin_right = 668.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Card" type="ColorRect" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_right = 332.0
margin_bottom = 580.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_right = 332.0
margin_bottom = 580.0

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 332.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="Game_ID" type="RichTextLabel" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 332.0
margin_bottom = 315.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
selection_enabled = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 319.0
margin_right = 332.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 166.0
margin_top = 130.0
margin_right = 166.0
margin_bottom = 130.0

[node name="Chat" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 672.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Chat"]
margin_right = 332.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Display" type="TextEdit" parent="MarginContainer/HBoxContainer/Chat/VBoxContainer"]
margin_right = 332.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="LineEdit" parent="MarginContainer/HBoxContainer/Chat/VBoxContainer"]
margin_top = 444.0
margin_right = 332.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
max_length = 35

[node name="SendButton" type="Button" parent="MarginContainer/HBoxContainer/Chat/VBoxContainer"]
margin_top = 514.0
margin_right = 332.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="MarginContainer/HBoxContainer/Select/VBoxContainer/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Chat/VBoxContainer/SendButton" to="." method="_on_SendButton_button_up"]
